# R2D2-pytorch

./: README.md  pyproject.toml  run.sh
code/: options.py
code/data/: feed_data.py  grapher.py
code/data/preprocessing_scripts/: create_vocab.py
code/model/: agent.py  baseline.py  debate_printer.py  environment.py  judge.py  simple_classifier.py  trainer.py
configs/: WN18RR.sh
